--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,17 +1,37 @@
-body        { background: #E8EFF0; margin: 0; padding: 0; }
-body, input { font-family: 'Helvetica Neue', Arial,
-              sans-serif; font-weight: 300; font-size: 18px; }
-.box        { width: 500px; margin: 60px auto; padding: 20px;
-              background: white; box-shadow: 0 1px 4px #BED1D4;
-              border-radius: 2px; }
-a           { color: #11557C; }
-h1, h2      { margin: 0; color: #11557C; }
-h1 a        { text-decoration: none; }
-h2          { font-weight: normal; font-size: 24px; }
-.tagline    { color: #888; font-style: italic; margin: 0 0 20px 0; }
-.link div   { overflow: auto; font-size: 0.8em; white-space: pre;
-              padding: 4px 10px; margin: 5px 0; background: #E5EAF1; }
-dt          { font-weight: normal; }
-.error      { background: #E8EFF0; padding: 3px 8px; color: #11557C;
-              font-size: 0.9em; border-radius: 2px; }
-.urlinput   { width: 300px; }
+html{
+	height: 100%;
+}
+@media (max-width: 992px){
+	body{
+		background-size: auto 100%;
+	}
+}
+body {
+	background-image:url('../img/background.jpg');
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+footer {
+	width: 100%;
+	position: fixed;
+	bottom: 0;
+	background: transparent;
+}
+.box {
+	width:585px;
+	margin:60px auto;
+	padding:20px;
+	background:white;
+	box-shadow:01px 4px #BED1D4;
+	border-radius:2px;
+}
+#treesvg {
+	background: #ECF0F1;
+}
+input,button {
+	cursor: pointer;
+}
